<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Interface.activity_add_despesa">

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#353F77"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="311dp"
        android:layout_height="66dp"
        android:text="TextView"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="38dp"
        tools:text="@string/txtin" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="238dp"
        android:layout_height="67dp"
        android:text="TextView"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="94dp"
        tools:text="@string/txtin2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="143dp"
        android:layout_height="31dp"
        android:text="TextView"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="191dp"
        tools:text="@string/ttipoGasto" />

    <TextView
        android:layout_width="46dp"
        android:layout_height="32dp"
        android:text="TextView"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="282dp"
        tools:text="@string/lData" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="52dp"
        android:layout_height="37dp"
        android:text="TextView"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="370dp"
        tools:text="@string/tSaldo" />

    <EditText
        android:id="@+id/tTipoGasto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:shadowColor="#FFFFFF"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FDFDFD"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:layout_editor_absoluteX="100dp" />

    <EditText
        android:id="@+id/tData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:shadowColor="#FFFFFF"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FDFDFD"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:layout_editor_absoluteX="100dp" />

    <EditText
        android:id="@+id/tSaldo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="184dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:shadowColor="#FFFFFF"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FDFDFD"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:layout_editor_absoluteX="100dp" />

    <Button
        android:id="@+id/bAddsaldo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoText="@bool/bAddDespesa"
        android:text="Adicionar Despesa"
        tools:layout_editor_absoluteX="110dp"
        tools:layout_editor_absoluteY="520dp" />

    <Button
        android:id="@+id/Voltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Retornar"
        tools:layout_editor_absoluteX="157dp"
        tools:layout_editor_absoluteY="575dp" />

</androidx.constraintlayout.widget.ConstraintLayout>