<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:onClick="bEntrar"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="639dp"
        android:layout_height="176dp"
        android:background="#353F77"
        tools:layout_editor_absoluteX="-114dp"
        tools:layout_editor_absoluteY="-1dp">

        <TextView
            android:id="@+id/lBemvindo"
            android:layout_width="147dp"
            android:layout_height="50dp"
            android:fontFamily="sans-serif-condensed"
            android:includeFontPadding="false"
            android:text="@string/lBemvindo"
            android:textColor="#FFFFFF"
            android:textSize="34sp"
            app:flow_horizontalAlign="center"
            app:flow_verticalAlign="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="39dp" />

        <TextView
            android:id="@+id/lFinancas"
            android:layout_width="257dp"
            android:layout_height="55dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/lFinancas"
            android:textColor="#FFFFFF"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="104dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/lLogin"
        android:layout_width="68dp"
        android:layout_height="31dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/lLogin"
        android:textColor="#000000"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="47dp"
        tools:layout_editor_absoluteY="249dp" />

    <EditText
        android:id="@+id/tLogin"
        android:layout_width="319dp"
        android:layout_height="42dp"
        android:ems="10"
        android:fontFamily="sans-serif-condensed"
        android:inputType="textPersonName"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lLogin" />

    <EditText
        android:id="@+id/tSenha"
        android:layout_width="318dp"
        android:layout_height="41dp"
        android:ems="10"
        android:fontFamily="sans-serif-condensed"
        android:inputType="textPassword"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lSenha" />

    <TextView
        android:id="@+id/lSenha"
        android:layout_width="88dp"
        android:layout_height="31dp"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/lSenha"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/tLogin"
        tools:layout_editor_absoluteX="46dp" />

    <TextView
        android:id="@+id/lCredenciais"
        android:layout_width="333dp"
        android:layout_height="59dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/lCredenciais"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="190dp"
        tools:text="Entre com suas credenciais:" />

    <Button
        android:id="@+id/bEntrar"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:onClick="bEntrar"
        android:text="Entrar"
        android:textColor="#FFFFFF"
        app:backgroundTint="#3F51B5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="421dp" />

    <Button
        android:id="@+id/bRegistrar"
        android:layout_width="146dp"
        android:layout_height="45dp"
        android:onClick="bRegistrar"
        android:text="Registrar"
        app:backgroundTint="#3F51B5"
        tools:layout_editor_absoluteX="132dp"
        tools:layout_editor_absoluteY="466dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="482dp"
        android:layout_height="377dp"
        android:background="@mipmap/layer_outro"
        android:onClick="bCadastro"
        tools:layout_editor_absoluteX="-36dp"
        tools:layout_editor_absoluteY="446dp">

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>